# RequestsQuery

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: main.py  utils.py
tests/: test_main.py  test_utils.py
